# dgx-spark-benchmark

./: Dockerfile  README.md  analyze_benchmarks.py  benchmark.py  benchmark_config.json  docker-compose.yml  pyproject.toml  visualize.py
final_results/: nvidia-smi-info
final_results/qwen-0_6B/results/: Qwen_Qwen3-0.6B-FP8_conc100_in32000_out1024_long_context_rag_20260210_011320.json  Qwen_Qwen3-0.6B-FP8_conc100_in32000_out1024_low_context_chat_20260210_010148.json  Qwen_Qwen3-0.6B-FP8_conc100_in32000_out1024_middle_context_rag_20260210_010724.json  Qwen_Qwen3-0.6B-FP8_conc10_in32000_out1024_long_context_rag_20260210_011002.json  Qwen_Qwen3-0.6B-FP8_conc10_in32000_out1024_low_context_chat_20260210_010002.json  Qwen_Qwen3-0.6B-FP8_conc10_in32000_out1024_middle_context_rag_20260210_010410.json  Qwen_Qwen3-0.6B-FP8_conc1_in32000_out1024_long_context_rag_20260210_010746.json  Qwen_Qwen3-0.6B-FP8_conc1_in32000_out1024_low_context_chat_20260210_005805.json  Qwen_Qwen3-0.6B-FP8_conc1_in32000_out1024_middle_context_rag_20260210_010159.json  Qwen_Qwen3-0.6B-FP8_conc20_in32000_out1024_long_context_rag_20260210_011027.json  Qwen_Qwen3-0.6B-FP8_conc20_in32000_out1024_low_context_chat_20260210_010018.json  Qwen_Qwen3-0.6B-FP8_conc20_in32000_out1024_middle_context_rag_20260210_010435.json  Qwen_Qwen3-0.6B-FP8_conc30_in32000_out1024_long_context_rag_20260210_011050.json  (+61 more)
prepare_dataset/: generate_dataset.py  make_yourself_dataset.ipynb
prepare_dataset/dataset/: long_context_rag.jsonl  low_context_chat.jsonl  middle_context_rag.jsonl
(+460 files in other folders)
